--- a/MFS.WinForms/Properties/Resources.resx
+++ b/MFS.WinForms/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="leftside" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\leftside.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mfs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mfs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
