--- a/MFS.WinForms/Properties/Resources.resx
+++ b/MFS.WinForms/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="two_user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\two-user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="undraw_empty_xct9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\undraw_empty_xct9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="undraw_No_data_re_kwbl" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\undraw_No_data_re_kwbl.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
